Fix Hungarian abstract

--- a/src/content/abstract.tex
+++ b/src/content/abstract.tex
@@ -8,13 +8,13 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-A modell alapú technológiák növelik az IT rendszerek tervezésének hatékonyságát azáltal, hogy lehetővé teszik a verifikáció, kódgenerálás és rendszeranalízis automatizálását egy formális modellen keresztül. Az informatikai rendszerek viselkedésének leírására nyílik egyszerűen lehetőségünk az úgynevezett állapot alapú modellezés segítségével, ahol - köszönhetően a formális módszerek fejlődésének az utóbbi években - a modellek széleskörűen és hatékonyan alkalmazhatóak a rendszer tulajdonságainak vizsgálatára. Ilyen modellek létrehozásának egy lehetséges módja az aktív automatatanuló algoritmusok alkalmazása.
+A modell alapú technológiák növelik az IT rendszerek tervezésének hatékonyságát azáltal, hogy lehet\~{o}vé teszik a verifikáció, kódgenerálás és rendszeranalízis automatizálását egy formális modellen keresztül. Az informatikai rendszerek viselkedésének leírására nyílik egyszer\~{u}en lehet\~{o}ségünk az úgynevezett állapot alapú modellezés segítségével, ahol - köszönhet\~{o}en a formális módszerek fejl\~{o}désének az utóbbi években - a modellek széleskör\~{u}en és hatékonyan alkalmazhatóak a rendszer tulajdonságainak vizsgálatára. Ilyen modellek létrehozásának egy lehetséges módja az aktív automatatanuló algoritmusok alkalmazása.
 
-Egy rendszer formális modelljének előállítása több okból is kihívást jelenthet. Egyrészt, a modellezést végző mérnöknek nehéz az elképzelt rendszer minden tulajdonságát észben tartania részben a rendszer komplexitása, részben a lehetséges rejtett implikációk és ellentmondások miatt. Másfelől léteznek teljesen automatizált megoldások, mint például az aktív automatatanulás, ahol a modell építését végző algoritmust két komponens karakterizálja: egy tanító - amely ismeri a tanulni kívánt rendszer teljes viselkedését - továbbá egy tanuló - mely a tanítóhoz intézett kérdések alapján szintetizálja a modellt. Azonban gyakorlati határt jelent ezen megoldásoknál a rendszer következtetett viselkedésének validációja. Munkánkban egy olyan, részben automatizált megoldást javaslunk, mely az automatatanulást interaktív környezetben használja fel a modellezés elősegítése érdekében.
+Egy rendszer formális modelljének el\~{o}állítása több okból is kihívást jelenthet. Egyrészt, a modellezést végz\~{o} mérnöknek nehéz az elképzelt rendszer minden tulajdonságát észben tartania részben a rendszer komplexitása, részben a lehetséges rejtett implikációk és ellentmondások miatt. Másfel\~{o}l léteznek teljesen automatizált megoldások, mint például az aktív automatatanulás, ahol a modell építését végz\~{o} algoritmust két komponens karakterizálja: egy tanító - amely ismeri a tanulni kívánt rendszer teljes viselkedését - továbbá egy tanuló - mely a tanítóhoz intézett kérdések alapján szintetizálja a modellt. Azonban gyakorlati határt jelent ezen megoldásoknál a rendszer következtetett viselkedésének validációja. Munkánkban egy olyan, részben automatizált megoldást javaslunk, mely az automatatanulást interaktív környezetben használja fel a modellezés el\~{o}segítése érdekében.
 
-Ezen dolgozat célja, hogy támogassa az informatikai rendszertervezést az alapoktól fölfelé InterAktív automatatanulás segítségével. Ez a technika kihasználja a tervező mérnökök gyakori közreműködését - akik az algoritmus tanító komponensének felelnek meg - ugyanakkor automatizált technikákat is alkalmaz, ezzel orvosolva az automatizált ekvivalencia lekérdezések jelentős nehézségeit. Az ilyen módon előálló részben automatizált koncepció lehetővé teszi a mérnökök számára, hogy a rendszer elvárt viselkedésére koncentrálhassanak a viselkedési követelmények deklaratív megadásán és az algoritmus által javasolt modellek kiértékelésén keresztül.
+Ezen dolgozat célja, hogy támogassa az informatikai rendszertervezést az alapoktól fölfelé InterAktív automatatanulás segítségével. Ez a technika kihasználja a tervez\~{o} mérnökök gyakori közrem\~{u}ködését - akik az algoritmus tanító komponensének felelnek meg - ugyanakkor automatizált technikákat is alkalmaz, ezzel orvosolva az automatizált ekvivalencia lekérdezések jelent\~{o}s nehézségeit. Az ilyen módon el\~{o}álló részben automatizált koncepció lehet\~{o}vé teszi a mérnökök számára, hogy a rendszer elvárt viselkedésére koncentrálhassanak a viselkedési követelmények deklaratív megadásán és az algoritmus által javasolt modellek kiértékelésén keresztül.
 
-Ebben a dolgozatban bemutatunk egy adaptív, állapot alapú modellező keretrendszert, melybe megterveztük és integráltuk az interaktív algoritmust. Az ez által előállt keretrendszer egyesíti a manuális és automatizált megoldások előnyeit. Ezen felül kiterjesztettük a keretrendszert, hogy képes legyen különböző formalizmusok kezelésére és összeegyeztetésére is, elősegítve a modellvezérelt tervezést támogató interaktív automatatanuló algoritmusok fejlesztését és elemzését kiterjesztett alkalmazási területen.
+Ebben a dolgozatban bemutatunk egy adaptív, állapot alapú modellez\~{o} keretrendszert, melybe megterveztük és integráltuk az interaktív algoritmust. Az ez által el\~{o}állt keretrendszer egyesíti a manuális és automatizált megoldások el\~{o}nyeit. Ezen felül kiterjesztettük a keretrendszert, hogy képes legyen különböz\~{o} formalizmusok kezelésére és összeegyeztetésére is, el\~{o}segítve a modellvezérelt tervezést támogató interaktív automatatanuló algoritmusok fejlesztését és elemzését kiterjesztett alkalmazási területen.
 
 
 \vfill
